PZ adjust rv display size in plants, sales offers and events list